PGS Rest API v1.6 - addition of 3 new endpoints
